# gsoapOnvif

./: CMakeLists.txt  build.sh  main.cpp  onvifcomm.cpp  onvifcomm.h  onvifdevice.cpp  onvifdevice.h
3rdlib/armeabi-v7a/: libssl.so.1.1
gsoap-onvif/: OnvifImaging.cpp  OnvifImaging.h  OnvifPTZ.cpp  OnvifPTZ.h
gsoap-onvif/plugin/: ErrorLog.h  stdsoap2.cpp  stdsoap2.h  time_t.h  timeb.h
gsoap-onvif/source/include/: soapEventBindingProxy.h
src/: onvifdevice.cpp  onvifdevice.h
